# hypcli

./: .gitignore  README.md  codex.md  pyproject.toml  run_server.sh  tui.md
scratch_house/: __init__.py  client.py  models.py  server.py  telegram_bot.py  webrtc_client.py  webrtc_music.py
