[project]
name = "scratch-house"
version = "0.1.0"
description = "Lightweight CLI/TUI private voice & music lounge prototype"
requires-python = ">=3.11"
dependencies = [
  "aiohttp>=3.10,<4.0",
  "python-telegram-bot>=21.0,<22.0",
  "websockets>=12.0,<13.0"
]

[project.scripts]
scratch-house-server = "scratch_house.server:main"
scratch-house-client = "scratch_house.client:main"
scratch-house-telegram-bot = "scratch_house.telegram_bot:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scratch_house"]
