[project]
name = "scratch-house"
version = "0.1.0"
description = "Lightweight CLI/TUI private voice & music lounge prototype"
requires-python = ">=3.8"
dependencies = [
  "aiohttp>=3.8,<3.10",
  "python-telegram-bot>=20.0,<21.0",
  "websockets>=10.4,<12.0"
]

[project.optional-dependencies]
webrtc = [
  "aiortc>=1.10,<2.0; python_version >= '3.10'"
]

[project.scripts]
scratch-house-server = "scratch_house.server:main"
scratch-house-client = "scratch_house.client:main"
scratch-house-telegram-bot = "scratch_house.telegram_bot:main"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scratch_house"]
